# Solving-algorithmic-problems

./: .gitignore  README.md
BOJ step-by-step problem solving/: CMakeLists.txt
BOJ step-by-step problem solving/Step1 - Input_output and arithmetic operation/: BOJ1000.cpp  BOJ1001.cpp  BOJ1008.cpp  BOJ10171.cpp  BOJ10172.cpp  BOJ10430.cpp  BOJ10718.cpp  BOJ10869.cpp  BOJ10998.cpp  BOJ2557.cpp
BOJ step-by-step problem solving/Step2 - if statement/: BOJ1330.cpp  BOJ14681.cpp  BOJ2753.cpp  BOJ2884.cpp  BOJ9498.cpp
BOJ step-by-step problem solving/Step3 - for statement/: BOJ10871.cpp  BOJ10950.cpp  BOJ11021.cpp  BOJ11022.cpp  BOJ15552.cpp  BOJ2438.cpp  BOJ2439.cpp  BOJ2739.cpp  BOJ2741.cpp  BOJ2742.cpp  BOJ8393.cpp
BOJ step-by-step problem solving/Step4 - while statement/: BOJ10951.cpp  BOJ10952.cpp  BOJ1110.cpp
BOJ step-by-step problem solving/Step5 - Lab 1/: BOJ10039.cpp  BOJ10817.cpp  BOJ10996.cpp  BOJ2446.cpp  BOJ2523.cpp  BOJ5543.cpp
BOJ step-by-step problem solving/Step6 - 1-Dimensional Array/: BOJ10818.cpp  BOJ1546.cpp  BOJ2562.cpp  BOJ2577.cpp  BOJ3052.cpp  BOJ4344.cpp  BOJ8958.cpp
BOJ step-by-step problem solving/Step7 - Function/: BOJ1065.cpp  BOJ15596.cpp  BOJ4673.cpp
BOJ step-by-step problem solving/Step8 - String/: BOJ10809.cpp  BOJ1152.cpp  BOJ1157.cpp  BOJ11654.cpp  BOJ11720.cpp  BOJ1316.cpp  BOJ2675.cpp  BOJ2908.cpp  BOJ2941.cpp
DSC/BackTracking_9_23/: BOJ18428.py
DSC/Backtracking_8_19/: BOJ1759.py
DSC/DFS_BFS_7_29/: 2468_yonghun.py  2468_yonghun1.py
DSC/DP_7_15/: 11054_yonghun.py  1254_yonghun.py  2579_yonghun.py  N으로표현_yonghun.py  타일_장식물_yonghun.py
DSC/DP_9_02/: 타겟넘버.py
DSC/Greedy_11_4/: BOJ15729.py
DSC/Greedy_8_05/: BOJ1543.py  BOJ2352.py  BOJ2812.py  구명보트.py
DSC/String_11_11/: BOJ10988.py
DSC/String_9_30/: BOJ9935.py
Programmers/LEVEL1 - SQL/: 동물의 아이디와 이름.SQL  상위 n개 레코드.SQL  아픈 동물 찾기.SQL  어린 동물 찾기.SQL  이름 없는 동물의 아이디.SQL  이름이 있는 동물의 아이디.SQL
Programmers/LEVEL2 - SQL/: DATETIME에서 DATE로 형 변환.SQL  NULL 처리하기.SQL  고양이와 개는 몇 마리 있을까.SQL  동명 동물 수 찾기.SQL  루시와 엘라 찾기.SQL  이름에 el이 들어가는 동물 찾기.SQL  입양 시각 구하기(1).SQL  중복 제거하기.SQL  중성화 여부 파악하기.SQL  최솟값 구하기.SQL
Programmers/Level1/: 2016년.py  K번째수.py  x만큼 간격이 있는 n개의 숫자.py  가운데 글자 가져오기.py  같은 숫자는 싫어.py  나누어 떨어지는 숫자 배열.py  두 정수 사이의 합.py  두개 뽑아서 더하기.py  문자열 내 p와 y의 개수.py  문자열 내 마음대로 정렬하기.py  문자열 내림차순으로 배치하기.py  문자열 다루기 기본.py  서울에서 김서방 찾기.py  소수 찾기.py  수박수박수박수박수박수.py  시저 암호.py  약수의 합.py  예산.py  이상한 문자 만들기.py  자릿수 더하기.py  자연수 뒤집어 배열로 만들기.py  정수 내림차순으로 배치하기.py  정수 제곱근 판별.py  제일 작은 수 제거하기.py  직사각형 별찍기.py  짝수와 홀수.py  최대공약수와 최소공배수.py  콜라츠 추측.py  평균 구하기.py  하샤드 수.py  핸드폰 번호 가리기.py  행렬의 덧셈.py
Programmers/Level2/: 124 나라의 숫자.py  H-index.py  JadenCase 문자열 만들기.py  N개의 최소공배수.py  가장 큰 수.py  기능개발.py  다리를 지나는 트럭.py  다음 큰 숫자.py  더 맵게.py  멀쩡한 사각형.py  소수 만들기.py  숫자의 표현.py  스킬트리.py  영어 끝말잇기.py  예상 대진표.py  올바른 괄호.py  전화번호 목록.py  점프와 순간이동.py  주식가격.py  짝지어 제거하기.py  최솟값 만들기.py  카펫.py  큰 수 만들기.py  타겟 넘버.py  폰켓몬.py  프린터.py  피보나치 수.py  행렬의 곱셈.py
