cmake_minimum_required(VERSION 3.16)
project(BOJ__)

set(CMAKE_CXX_STANDARD 14)

add_executable(BOJ__
#        main.cpp
#        "Step1 - Input_output and arithmetic operation/BOJ2557.cpp"
#        "Step1 - Input_output and arithmetic operation/BOJ10718.cpp"
#        "Step1 - Input_output and arithmetic operation/BOJ10171.cpp"
#        "Step1 - Input_output and arithmetic operation/BOJ10172.cpp"
#        "Step1 - Input_output and arithmetic operation/BOJ1000.cpp"
#        "Step1 - Input_output and arithmetic operation/BOJ1001.cpp"
#        "Step1 - Input_output and arithmetic operation/BOJ10998.cpp"
#        "Step1 - Input_output and arithmetic operation/BOJ1008.cpp"
#        "Step1 - Input_output and arithmetic operation/BOJ10869.cpp"
#        "Step1 - Input_output and arithmetic operation/BOJ10430.cpp"

#        "Step2 - if statement/BOJ1330.cpp"
#        "Step2 - if statement/BOJ9498.cpp"
#        "Step2 - if statement/BOJ2753.cpp"
#        "Step2 - if statement/BOJ14681.cpp"
#        "Step2 - if statement/BOJ2884.cpp"

#        "Step3 - for statement/BOJ2739.cpp"
#        "Step3 - for statement/BOJ10950.cpp"
#        "Step3 - for statement/BOJ8393.cpp"
#        "Step3 - for statement/BOJ15552.cpp"
#        "Step3 - for statement/BOJ2741.cpp"
#        "Step3 - for statement/BOJ2742.cpp"
#        "Step3 - for statement/BOJ11021.cpp"
#        "Step3 - for statement/BOJ11022.cpp"
#        "Step3 - for statement/BOJ2438.cpp"
#        "Step3 - for statement/BOJ2439.cpp"
#        "Step3 - for statement/BOJ10871.cpp"
#        "Step3 - while statement/BOJ10952.cpp"
#        "Step3 - while statement/BOJ10951.cpp"
        "Step3 - while statement/BOJ1110.cpp"
        )